@@ -529,6 +529,15 @@
                                 <arg>--add-exports</arg>
                                 <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.type=tornado.drivers.opencl,tornado.drivers.cuda
                                 </arg>
+                                <arg>--add-exports</arg>
+                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.replacements.nodes=tornado.runtime
+                                </arg>
+                                <arg>--add-exports</arg>
+                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.graph=tornado.drivers.opencl,tornado.drivers.cuda
+                                </arg>
+                                <arg>--add-exports</arg>
+                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.common.util=tornado.drivers.opencl,tornado.drivers.cuda
+                                </arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
